# world_canvas_msgs

./: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
msg/: Annotation.msg  AnnotationData.msg  SemanticMap.msg
srv/: GetAnnotations.srv  LoadAnnotationsData.srv  PubAnnotationsData.srv  SaveAnnotationsData.srv
